--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@ant-design/colors": "^4.0.5",
     "@ant-design/icons": "^4.2.2",
+    "@fullcalendar/core": "^5.3.1",
     "@fullcalendar/daygrid": "^5.3.2",
     "@fullcalendar/interaction": "^5.3.1",
+    "@fullcalendar/moment-timezone": "^5.3.1",
     "@fullcalendar/react": "^5.3.1",
     "@fullcalendar/timegrid": "^5.3.1",
     "@testing-library/jest-dom": "^4.2.4",
